Fix spacing between scoreboard and gameboard

--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,8 @@
    ====================== */
 
 * {
-    outline: 1px solid red;
-}
+/*     outline: 1px solid red;
+ */}
 
 .body {
     height: 100vh;
@@ -81,6 +81,7 @@
     justify-content: center;
     height: 200px;
     width: 100%;
+    margin-top: 70px;
 }
 
 .scoreboard {
